* First public version of the website

--- a/src/BOLD/HomeBundle/Resources/views/Default/index.html.twig
+++ b/src/BOLD/HomeBundle/Resources/views/Default/index.html.twig
@@ -4,7 +4,15 @@
       <div id="header">
         <div id="wrapper">
           <div id="slider-wrapper">
-	  </div>
+            <div id="slider" class="nivoSlider">
+              <img src="{{ asset('bundles/boldhome/images/slider/station.jpg') }}" alt="Our home" title="#stationcaption"/>
+              <img src="{{ asset('bundles/boldhome/images/slider/titan.jpg') }}" alt="Our home" title="#titancaption"/>
+              <img src="{{ asset('bundles/boldhome/images/slider/logi.jpg') }}" alt="Our home" title="#logicaption"/>
+        	  </div>
+            <div id="stationcaption" class="nivo-html-caption">Our home in CZK-ZQ</div>
+            <div id="titancaption" class="nivo-html-caption">Waiting to go on an op</div>
+            <div id="logicaption" class="nivo-html-caption">The magic logistics triangle</div>
+          </div>
         </div>
       </div>
 
