--- a/src/BOLD/HomeBundle/Resources/views/Structure/index.html.twig
+++ b/src/BOLD/HomeBundle/Resources/views/Structure/index.html.twig
@@ -10,13 +10,13 @@
   {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Asmodean Shepherd", 'image': "asmodean_shepherd.jpg", 'title': "CEO", 'function': "" } %}
   {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Robby Rolfe", 'image': "robby_rolfe.jpg", 'title': "Director", 'function': "Security" } %}
   {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Thalonia", 'image': "thalonia.jpg", 'title': "Director", 'function': "Logistics" } %}
-  {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Gavakz Moliko", 'image': "gavakz_moliko.jpg", 'title': "Officer", 'function': "Military / PVP" } %}
-  {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Lefty Leftfield", 'image': "lefty_leftfield.jpg", 'title': "Officer", 'function': "Military / PVP" } %}
+  {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Gavakz Moliko", 'image': "gavakz_moliko.jpg", 'title': "Officer", 'function': "Military" } %}
+  {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Lefty Leftfield", 'image': "lefty_leftfield.jpg", 'title': "Officer", 'function': "Military" } %}
   {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "marauder84", 'image': "marauder84.jpg", 'title': "Officer", 'function': "IT" } %}
-  {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Moomincake", 'image': "moomincake.jpg", 'title': "Officer", 'function': "Internal Affairs" } %}
+  {# include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Moomincake", 'image': "moomincake.jpg", 'title': "Officer", 'function': "Internal Affairs" } #}
   {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Nick Cornax", 'image': "nick_cornax.jpg", 'title': "Officer", 'function': "Diplomat" } %}
-  {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Sunti Chent-Shi", 'image': "sunti_chentshi.jpg", 'title': "Officer", 'function': "Military / PVP" } %}
-  {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Tarus Slothenstein", 'image': "tarus_slothenstein.jpg", 'title': "Officer", 'function': "Recruitment, Military / PVP" } %}
+  {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Sunti Chent-Shi", 'image': "sunti_chentshi.jpg", 'title': "Officer", 'function': "Military" } %}
+  {% include 'BOLDHomeBundle:Structure:person.html.twig' with { 'name': "Tarus Slothenstein", 'image': "tarus_slothenstein.jpg", 'title': "Officer", 'function': "Recruitment, Military" } %}
 </div>
 
 <h2>Our Divisions</h2>
@@ -34,7 +34,7 @@
   </tr>
   <tr>
     <th>Internal Affairs</th>
-    <td>Moomincake</td>
+    <td>Nick Cornax</td>
   </tr>
   <tr>
     <th>IT</th>
