--- a/src/BOLD/HomeBundle/Resources/public/styles.css
+++ b/src/BOLD/HomeBundle/Resources/public/styles.css
@@ -79,7 +79,7 @@ body{
 #menu{
   position: fixed;
   top: 0;
-  z-index: 10;
+  z-index: 100;
 	background: url(images/menu_bg.png) no-repeat top left;
 	height: 91px;
 	width: 900px;
@@ -122,7 +122,7 @@ body{
 	width: 1032px;
 	margin: 0 auto;
 	height: 140px;
-	padding-top: 125px;
+	padding-top: 105px;
 	padding-left: 60px;
 	
 }
@@ -158,7 +158,7 @@ body{
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-	background-color: #333333 ;
+	background-color: rgba(51,51,51,.8);
 	padding:12px 12px 0 12px;
 	}
 /*
@@ -285,6 +285,10 @@ column_box
 #footer_top p{
 	color: #ffffff;
 	line-height: 20px;
+}
+
+#footer_top div ul {
+  margin-top: 0px;
 }
 
 #footer_column1, #footer_column2, #footer_column3{
@@ -511,3 +515,8 @@ table.team th, table.structure th {
   margin-right: 15px;
 }
 
+.nivo-caption {
+  background-color: rgba(0,0,0,.8);
+  text-align: right;
+  font-size: 120%;
+}
