--- a/src/BOLD/HomeBundle/Resources/views/Default/base.html.twig
+++ b/src/BOLD/HomeBundle/Resources/views/Default/base.html.twig
@@ -8,8 +8,8 @@
   <title>Brave Operations - Lollipop Division</title>
   <meta name="keywords" content="eve, eve corporation, mmo, eve online" />
   <meta name="description" content="Brave Operations - Lollipop Division is the permier small gang PVP divisin within the BRAVE collective" />
-  <link href="{{ asset('bundles/boldhome/styles.css') }}" rel="stylesheet" type="text/css" media="screen" />
   <link rel="stylesheet" href="{{ asset ('bundles/boldhome/nivo-slider.css') }}" type="text/css" media="screen" />
+  <link href="{{ asset('bundles/boldhome/styles.css') }}" rel="stylesheet" type="text/css" media="screen" />
   <link rel="icon" href="{{ asset('bundles/boldhome/images/bold.ico') }}" type="image/x-icon">
   <link rel="shortcut icon" href="{{ asset('bundles/boldhome/images/bold.ico') }}" type="image/x-icon">
 </head>
@@ -43,17 +43,15 @@
 
       <div id="footer_top">
         <div id="footer_column1">
-          <h3>Infos</h3>
-
+          <h3>Info</h3>
           <div class="footer_text">
-            <p><a href="{{ path("info_newtobold") }}">Infos for new members</a>
-            </p><br />
-
-            <p><a href="https://wiki.braveineve.com/dojo/guides/authorize_core_setup" target="_blank">How to setup CORE auth and Mumble</a></p><br />
-            
-            <p><a href="http://imgur.com/a/vVkW2#0" target="_blank">How to setup BRAVE jabber</a></p><br />
-
+            <ul class="ls">
+              <li><a href="{{ path("info_newtobold") }}">Info for new members</a></li>
+              <li><a href="https://wiki.braveineve.com/dojo/guides/authorize_core_setup" target="_blank">How to setup CORE auth and Mumble</a></li>
+              <li><a href="http://imgur.com/a/vVkW2#0" target="_blank">How to setup BRAVE jabber</a></li>
+            </ul>
           </div>
+
         </div>
 
         <div id="footer_column2">
@@ -121,7 +119,7 @@
    <script type="text/javascript">
 //<![CDATA[
           $(window).load(function() {
-          $('#slider').nivoSlider();
+              $('#slider').nivoSlider({ pauseTime: 20000 });
           });
           //]]>
           </script>
